# fooddemand_py

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  run.ipynb  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
food_env/: pyvenv.cfg
fooddemand_py/: pyvenv.cfg
lightning_logs/version_0/: hparams.yaml
src/fooddemand_py/: __init__.py  data.py  read.py
tests/: __init__.py  test_fooddemand_py.py
